JEP-465 String Templates withdrawn
JEP-465 String Templates (Third Preview) was withdrawn.
Classes won't be available in Java 23, so stripping out their usage.